# clock-widget

./: .gitignore  Cargo.toml  PORTABLE.txt  README.md  RELEASE_NOTES.md  SECURITY.md  tauri.conf.json
.github/workflows/: release.yml
scripts/: build-portable-zip.cmd  build-portable-zip.ps1  build-release-assets.cmd  build-release-assets.ps1
src/: app.js  index.html  main.rs  styles.css
