[package]
name = "clock-widget"
version = "2.0.0"
description = "macOS-style clock widget for Windows 11"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Pikatov/clock-widget"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-create", "window-set-size", "window-set-always-on-top", "window-set-focus", "window-close", "window-start-dragging"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
